@@ -1,5 +1,10 @@
 2007-02-05  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: Patch from Robert Dale <robdale@gmail.com>
+	to add the application/x-dar mime-type (Closes: #6760)
+
+2007-02-05  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: Add magic for the PGN mime-type,
 	make it a text/plain sub-class, change the human-readable name
 	to "PGN chess game notation" (Closes: #8286)
